--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,13 @@
 {
     "name": "lotoservizi/webfunc",
-    "authors": [
-        {
-            "name": "giovanni",
-            "email": "giovanni.lorenzini@gmail.com"
-        }
-    ],
+    "description": "Framework proprietario sviluppato da Loto Servizi.",
+    "keywords": ["framework", "lotoservizi"],
+    "license": "proprietary",
+    "type": "project",
+    "authors": [{"name": "Giovanni Lorenzini", "email": "giovanni.lorenzini@gmail.com"}],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.6",
+        "phpmailer/phpmailer": "~6.0",
+        "setasign/fpdi-fpdf": "^2.0"
     }
 }
